[package]
name = "stm32f103_blink"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 's'
lto = true
debug = true

[dependencies]
stm32f1 = {version = "0.7.1", features = ["stm32f103", "rt"]}
cortex-m-rtfm = {version = "0.4.3", features = ['timer-queue']}
cortex-m = "0.6.0"
panic-semihosting = "0.5.2"